# ida-sigmaker

./: .coveragerc  .gitignore  ALGORITHM.md  CHANGELOG.md  README.md  docker-compose.yml  ida-plugin.json  probe_compiler_intrinsics.py  pyproject.toml  setup.py  sigmaker.py
.claude/: settings.local.json
.githooks/: pre-commit
.github/workflows/: deploy.yml  python.yml  release.yml
docs/superpowers/plans/: 2026-07-14-pr57-regression-hardening.md  2026-07-16-hcli-publishing.md  2026-07-16-python-314-wheels.md  2026-07-20-armv7-aarch64-fixtures.md
docs/superpowers/specs/: 2026-07-14-compact-signature-input-design.md  2026-07-14-contiguous-hex-signature-input-design.md  2026-07-14-pr57-regression-hardening-design.md  2026-07-16-hcli-publishing-design.md  2026-07-16-python-314-wheels-design.md  2026-07-20-armv7-aarch64-fixtures-design.md
examples/: batch_search_c_formatter.py
include/: simd_support.hpp
src/: sigmaker.py
src/sigmaker/: __init__.py
src/sigmaker/_speedups/: simd_scan.pxd  simd_scan.pyx
src/sigmaker_cli/: __init__.py  __main__.py
tests/: coveredtestcase.py  integration_test_sigmaker.py  performance_test.py  test_binary.asm  test_binary.raw  test_sigmaker.py  unit_test_packaging.py  unit_test_sigmaker.py  unit_test_sigmaker_cli.py
tests/_resources/arm/: NOTICE.md
tests/_resources/arm/aarch64/: NOTICE.md  aarch64_relocations.s
tests/_resources/arm/armv7/: NOTICE.md  armv7_relocations.s
tests/_resources/mips/: EXTERNAL.md  NOTICE.md  hi16_lo16.s
tests/_resources/x86_64/: NOTICE.md  minimal_signature.s
tests/perf/: adversarial_refine.py  segment_span_filter.py  working_set_sweep.py
tests/resources/: build_test_binary.py  objdump.txt  test_binary.asm
tools/: extract_engine.py  sync_plugin_version.py
