[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmaker"
requires-python = ">= 3.10"
version = "1.4.0"
authors = [
    { name = "Mahmoud Abdelkader", email = "m{_no-spam_}@mahmoudimus.com" },
]
description = "An IDA Pro 9.0+ cross-platform signature maker plugin that works on MacOS/Linux/Windows. It creates unique binary pattern signatures to identify specific functions or addresses within binaries, even after updates. It helps reverse engineers preserve their analysis work by generating resilient signatures that can quickly relocate important code locations in new binary versions."
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
]
keywords = [
    "ida pro",
    "signature",
    "sigmaker",
    "reverse engineering",
    "binary analysis",
    "pattern matching",
    "disassembler",
    "malware analysis",
    "function identification",
]
dependencies = []

[project.optional-dependencies]
ci = ["coverage"]

[project.urls]
Homepage = "https://mahmoudimus.com"
Documentation = "https://github.com/mahmoudimus/ida-sigmaker/blob/main/README.md"
Source = "https://github.com/mahmoudimus/ida-sigmaker"
Issues = "https://github.com/mahmoudimus/ida-sigmaker/issues"
