[build-system]
requires = ["setuptools>=77.0.1", "wheel", "cython>=3.1.3"]
build-backend = "setuptools.build_meta"

[project]
name = "sigmaker"
authors = [
    { name = "Mahmoud Abdelkader", email = "m{_no-spam_}@mahmoudimus.com" },
]
dynamic = ["readme", "version"]
description = "Cross-platform IDA Pro plugin for generating and searching resilient binary signatures across x86, x64, ARM, AArch64, MIPS, and MIPSEL binaries."
keywords = [
    "ida pro",
    "signature",
    "sigmaker",
    "reverse engineering",
    "binary analysis",
    "pattern matching",
    "disassembler",
    "malware analysis",
    "function identification",
    "x86",
    "x64",
    "arm",
    "armv7",
    "aarch64",
    "thumb",
    "mips",
    "mipsel",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development",
]
requires-python = ">= 3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []


[project.optional-dependencies]
ci = [
    "coverage",
    "cython>=3.1.3",
    "tomli>=2; python_version < '3.11'",
]
speedups = ["cython>=3.1.3"]

[project.urls]
Homepage = "https://mahmoudimus.com"
Documentation = "https://github.com/mahmoudimus/ida-sigmaker/blob/main/README.md"
Source = "https://github.com/mahmoudimus/ida-sigmaker"
Issues = "https://github.com/mahmoudimus/ida-sigmaker/issues"


[tool.setuptools.packages.find]
where = ["src", "include"]
#exclude = ["test*"]
# namespaces = true

## include = []
## exclude = []
[tool.setuptools.dynamic]
readme = { file = ["README.md", "LICENSE"], content-type = "text/markdown" }
version = { attr = "sigmaker.__version__" }

[tool.setuptools.package-data]
# # Check the <mypkg>.egg-info/SOURCES.txt file generated after a `build` or `pip install` to check if the following files are correctly included in the sdist.
# # Check also the list of files included by default: https://packaging.python.org/en/latest/guides/using-manifest-in/
"*" = [
    "*.md",
    "LICENSE*",
    "README*",
    "*.pyx",    # include the cython implementation sourcecode in the wheel, so that the user can cythonize later, this is necessary, it's not included by default even with extensions in setup.py
    "*.pxd",
    "*.c",
    "*.cpp",    # include the cythonized intermediary .c file for source distributions such as Gentoo, so that they do not need to install Cython v3 - no need since we use src-layout, it's automatically included
    #"tests",  # to help linux distros package builders, they may want to run the unit test to check their package is working OK - no need, tests folder is packaged by default in sdist nowadays
    "*.h",
    "*.hpp",
]

#[tool.setuptools.exclude-package-data]
#"*" = [
#    "docs/_build",
#    "tests/__pycache__",
#    "tests/.mypy_cache",
#]

# [tool.cibuildwheel.config-settings]
# --build-option = "--cythonize"
